--- a/PlantApp-WebApp/src/App.css
+++ b/PlantApp-WebApp/src/App.css
@@ -57,6 +57,17 @@ body {
   margin: 0 auto;
 }
 
+.content-background-rectangle {
+  background-color: #f0f0db;
+  border-radius: var(--border-radius);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0 rem;
+  padding: 1rem;
+  max-width: 990px; /* Make it narrower than the 1200px page */
+  margin: 0 auto;
+}
 /* Filter Controls */
 .filter-controls {
   display: flex;
